<package format="3">
  <name>sam2_streaming</name>
  <version>0.0.1</version>
  <description>ROS2 package for SAM2-based cmd_vel control</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>  <!-- ✅ 빌드 시스템 명확하게 지정 -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_python</build_type>  <!-- ✅ 빌드 타입 선언 -->
  </export>
</package>
